<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:layout_gravity="center"
android:background="@drawable/popup_border">

<TextView
    android:id="@+id/dwl_txt_welcome_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:layout_marginTop="128dp"
    android:layout_marginBottom="24dp"
    android:textSize="27sp"
    android:fontFamily="@font/inter"
    android:textColor="@color/main_text_color"
    android:textStyle="bold"
    android:textAlignment="center"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/dwl_txt_welcome"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/dwl_welcome"/>


<TextView
    android:id="@+id/dwl_txt_welcome"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="64dp"
    android:textSize="16sp"
    android:textColor="@color/main_text_color"
    android:fontFamily="@font/inter"
    android:textStyle="bold"
    android:textAlignment="center"
    app:layout_constraintBottom_toTopOf="@id/dwl_ll_descubre"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/dwl_txt_welcome"/>

        <LinearLayout
            android:id="@+id/dwl_ll_descubre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/dwl_ll_confirma"
            android:layout_marginBottom="30dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_icon_ionic_ios_checkmark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/dwl_discover"
                android:textColor="@color/main_text_color"
                android:textStyle="bold"
                android:textSize="15sp"
                android:fontFamily="@font/inter"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dwl_ll_confirma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/dwl_ll_descubre"
            app:layout_constraintBottom_toTopOf="@id/dwl_ll_aplica"
            android:layout_marginBottom="30dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_icon_ionic_ios_checkmark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/dwl_confirm"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/main_text_color"
                android:fontFamily="@font/inter"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dwl_ll_aplica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/dwl_ll_confirma"
            app:layout_constraintBottom_toTopOf="@id/dwl_btn_accept"
            android:layout_marginBottom="50dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_icon_ionic_ios_checkmark"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/dwl_apply"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/main_text_color"
                android:fontFamily="@font/inter"
                />
        </LinearLayout>

<androidx.appcompat.widget.AppCompatButton
    android:id="@+id/dwl_btn_accept"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="56dp"
    android:layout_marginEnd="56dp"
    android:paddingStart="48dp"
    android:paddingEnd="48dp"
    android:layout_marginBottom="43dp"
    android:textAllCaps="false"
    android:background="@drawable/ic_button_rounded"
    android:text="@string/dwl_txt_acept"
    android:textColor="@color/purple"
    android:textSize="15sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>