<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/fhd_shapes_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_vector_shapes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/fhd_ll_help"
        app:layout_constraintBottom_toTopOf="@id/fhd_ll_help">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/talents_background"
            android:scaleType="fitXY" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fade" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fhd_title"
        style="@style/title_descubre"
        android:fontFamily="@font/inter_bold"
        android:textFontWeight="700"
        android:textSize="27sp"
        android:textColor="@color/main_text_color"
        app:layout_constraintTop_toBottomOf="@id/fhd_shapes_top"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        />

    <LinearLayout
        android:id="@+id/fhd_ll_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_border_help_discover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        android:forceDarkAllowed="false"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="20dp"
            android:orientation="vertical">

            <!-- Test: Use textColor: dark_gray for xiaomi phone -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fhd_tv_help_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:forceDarkAllowed="false"
                android:text="@string/fhd_title_start"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:fontFamily="@font/inter_bold"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <!-- Test: Use textColor: dark_gray for xiaomi phone -->
            <TextView
                android:id="@+id/fhd_tv_help_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:forceDarkAllowed="false"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/fhd_txt_help"
                android:textAlignment="center" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/fwd_space_margin_beneficios"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dwl_btn_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="56dp"
            android:paddingStart="48dp"
            android:paddingEnd="48dp"
            android:layout_marginBottom="43dp"
            android:textAllCaps="false"
            android:background="@drawable/ic_button_rounded"
            android:text="@string/dwl_txt_acept"
            android:textColor="@color/purple"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>